<resources>
    <string name="app_name">Premier Jeu</string>
    <string name="devinez" translatable="false">Devinez</string>
    <string name="score" translatable="false">Score:</string>
    <string name="text3">0</string>
    <string name="editTextNumero">Saisie un nombre</string>
    <string name="ok">OK</string>
    <string name="textView5">0</string>
    <string name="textView6" translatable="false"></string>
    <string name="valeur_sup">Valeur superieure</string>
    <string name="valeur_inf">Valeur inferieur</string>
    <string name="bravo">BRAVO</string>
    <string name="rejouer">Rejouer ?</string>
    <string name="oui">OUI</string>
    <string name="quitter">Quitter</string>
</resources>