<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="146dp"
        android:layout_height="42dp"
        android:text="@string/devinez"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignBaseline="@id/textView"
        android:layout_alignEnd="@id/textView"
        android:layout_marginEnd="-117dp"
        android:text="@string/score"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/textView2"
        android:layout_marginEnd="-119dp"
        android:gravity="center"
        android:text="@string/text3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:ems="10"
        android:hint="@string/editTextNumero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_alignEnd="@id/textView"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-222dp"
        android:gravity="center"
        android:text="@string/ok"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="255dp"
        android:layout_height="53dp"
        android:layout_below="@id/editTextNumber" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_below="@id/buttonOK"
        android:layout_alignEnd="@id/progressBar"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="-111dp"
        android:text="@string/textView5"
        android:textAllCaps="false"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textViewIndication"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_below="@id/progressBar"
        android:layout_marginTop="9dp"
        android:text="@string/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ListView
        android:id="@+id/listeViewHistorique"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textViewIndication" />

</RelativeLayout>